--- a/11类.md
+++ b/11类.md
@@ -83,14 +83,12 @@ class A {
 
 ```typescript
 class Point {
-  x:number;
-  y:number;
-
+  x: number;
+  y: number;
   constructor(x:number, y:number) {
     this.x = x;
     this.y = y;
   }
-
   add(point:Point) {
     return new Point(
       this.x + point.x,
@@ -126,9 +124,7 @@ class Point {
 class Point {
   constructor(x:number, y:string);
   constructor(s:string);
-  constructor(xs:number|string, y?:string) {
-    // ...
-  }
+  constructor(xs:number|string, y?:string) { /* */ }
 }
 ```
 
@@ -258,7 +254,6 @@ class MyClass {
 ```typescript
 class MyClass {
   [s:string]: boolean;
-
   get isInstance() {
     return true;
   }
@@ -293,8 +288,8 @@ class Car {
   move():void {};
 }
 class MyCar implements Car {
-  id = 2; // 不可省略
-  move():void {};   // 不可省略
+  id = 2;         // 不可省略
+  move():void {}; // 不可省略
 }
 ```
 
@@ -313,9 +308,7 @@ interface Foo {
 **类可以实现多个接口（其实是接受多重限制），每个接口之间使用逗号分隔。**
 
 ```typescript
-class Car implements MotorVehicle, Flyable, Swimmable {
-  // ...
-}
+class Car implements MotorVehicle, Flyable, Swimmable { /* */ }
 ```
 
 上面示例中，`Car` 类同时实现了 `MotorVehicle、Flyable、Swimmable` 三个接口。 **这意味着，它必须部署这三个接口声明的所有属性和方法，满足它们的所有条件。**
@@ -325,10 +318,8 @@ class Car implements MotorVehicle, Flyable, Swimmable {
 第一种方法是类的继承。
 
 ```typescript
-class Car implements MotorVehicle {
-}
-class SecretCar extends Car implements Flyable, Swimmable {
-}
+class Car implements MotorVehicle {}
+class SecretCar extends Car implements Flyable, Swimmable {}
 ```
 
 上例中，`Car` 类实现了 `MotorVehicle`，而 `SecretCar` 类继承了 `Car` 类，然后再实现 `Flyable` 和 `Swimmable` 两个接口，相当于 `SecretCar` 类同时实现了三个接口。
@@ -349,23 +340,13 @@ interface B extends A {
 前一个例子可以用接口继承改写。
 
 ```typescript
-interface MotorVehicle {
-  // ...
-}
-interface Flyable {
-  // ...
-}
-interface Swimmable {
-  // ...
-}
+interface MotorVehicle { /* */ }
+interface Flyable { /* */ }
+interface Swimmable { /* */ }
 
-interface SuperCar extends MotoVehicle,Flyable, Swimmable {
-  // ...
-}
+interface SuperCar extends MotoVehicle,Flyable, Swimmable { /* */ }
 
-class SecretCar implements SuperCar {
-  // ...
-}
+class SecretCar implements SuperCar { /* */ }
 ```
 
 上面示例中，类 `SecretCar` 通过 `SuperCar` 接口，就间接实现了多个接口。
@@ -398,8 +379,8 @@ interface A {
 let a = new A();
 a.y = 10;
 
-a.x // 1
-a.y // 10
+a.x; // 1
+a.y; // 10
 ```
 
 上例中，类 `A` 与接口 `A` 同名，后者会被合并进前者的类型定义。
@@ -414,7 +395,7 @@ interface A {
   y:number;
 }
 let a = new A();
-a.y // undefined
+a.y; // undefined
 ```
 
 ## 3. Class 类型
@@ -426,7 +407,6 @@ TypeScript 的类本身就是一种类型，但是它代表该类的实例类型
 ```typescript
 class Color {
   name:string;
-
   constructor(name:string) {
     this.name = name;
   }
@@ -443,10 +423,8 @@ const green:Color = new Color('green');
 interface MotorVehicle {}
 class Car implements MotorVehicle {}
 
-// 写法一
-const c1:Car = new Car();
-// 写法二
-const c2:MotorVehicle = new Car();
+const c1:Car = new Car();          // 写法一
+const c2:MotorVehicle = new Car(); // 写法二
 ```
 
 上例中，变量的类型可以写成类 `Car`，也可以写成接口 `MotorVehicle`。它们的区别是，如果类 `Car` 有接口 `MotoVehicle` 没有的属性和方法，那么只有变量 `c1` 可以调用这些属性和方法。
@@ -457,13 +435,11 @@ const c2:MotorVehicle = new Car();
 class Point {
   x:number;
   y:number;
-
   constructor(x:number, y:number) {
     this.x = x;
     this.y = y;
   }
 }
-
 function createPoint(
   PointClass:Point,
   x: number,
@@ -501,9 +477,7 @@ function createPoint(
 class Foo {
   id!:number;
 }
-function fn(arg:Foo) {
-  // ...
-}
+function fn(arg:Foo) { /* */ }
 const bar = {
   id: 10,
   amount: 100,
@@ -522,7 +496,6 @@ class Person {
 class Customer {
   name: string = '';
 }
-
 const c:Customer = new Person();
 ```
 
@@ -535,11 +508,9 @@ class Person {
   name: string = '';
   age: number = '';
 }
-
 class Customer {
   name: string = '';
 }
-
 const c:Customer = new Person();
 ```
 
@@ -578,11 +549,7 @@ const p:Person = obj;
 
 ```typescript
 class Empty {}
-
-function fn(x:Empty) {
-  // ...
-}
-
+function fn(x:Empty) { /* */ }
 fn({});
 fn(window);
 fn(fn);
@@ -617,8 +584,7 @@ const point:Point = new Position('');
 class A {
   private name = 'a';
 }
-class B extends A {
-}
+class B extends A {}
 const a:A = new B();
 
 // 情况二
@@ -643,11 +609,10 @@ class A {
     console.log('Hello, world!');
   }
 }
-class B extends A {
-}
+class B extends A {}
 
 const b = new B();
-b.greet() // "Hello, world!"
+b.greet(); // "Hello, world!"
 ```
 
 上例中，子类 `B` 继承了基类 `A`，因此就拥有了 `greet()` 方法，不需要再次在类的内部定义这个方法了。
@@ -705,14 +670,9 @@ class A {
 }
 
 class B extends A {
-  // 正确
-  public x:string = '';
-
-  // 正确
-  protected y:string = '';
-
-  // 报错
-  private z: string = '';
+  public x:string = '';    // 正确
+  protected y:string = ''; // 正确
+  private z: string = '';  // 报错
 }
 ```
 
@@ -808,7 +768,6 @@ class B extends A {
 class A {
   private x = 0;
 }
-
 class B extends A {
   x = 1; // Class 'B' incorrectly extends base class 'A'. Property 'x' is private in type 'A' but not in type 'B'. 'x' is declared but its value is never read. 类'B'错误地扩展了基类'A'。属性'x'在类型'A'中是私有的，但在类型'B'中不是。声明了'x'，但永远不会读取它的值。
 }
@@ -821,14 +780,13 @@ class B extends A {
 ```typescript
 class A {
   private x = 10;
-
   f(obj:A) {
     console.log(obj.x);
   }
 }
 
 const a = new A();
-a.f(a) // 10
+a.f(a); // 10
 ```
 
 上例中，在类 `A` 内部，`A` 的实例对象可以获取私有成员x。
@@ -858,7 +816,7 @@ class A {
 }
 
 const a = new A();
-a['x'] // Element implicitly has an 'any' type because expression of type '"x"' can't be used to index type 'A'. Property 'x' does not exist on type 'A'. 元素隐式地具有'any'类型，因为类型' x '的表达式不能用于索引类型'A'。 类型'A'上不存在属性'x'。
+a['x']; // Element implicitly has an 'any' type because expression of type '"x"' can't be used to index type 'A'. Property 'x' does not exist on type 'A'. 元素隐式地具有'any'类型，因为类型' x '的表达式不能用于索引类型'A'。 类型'A'上不存在属性'x'。
 ```
 
 构造方法也可以是私有的，这就直接防止了使用 `new` 命令生成实例对象，只能在类的内部创建实例对象。这时一般会有一个静态方法，充当工厂函数，强制所有实例都通过该方法生成。
@@ -866,9 +824,7 @@ a['x'] // Element implicitly has an 'any' type because expression of type '"x"' 
 ```typescript
 class Singleton {
   private static instance?: Singleton;
-
   private constructor() {}
-
   static getInstance() {
     if (!Singleton.instance) {
       Singleton.instance = new Singleton();
@@ -889,7 +845,6 @@ const s = Singleton.getInstance();
 class A {
   protected x = 1;
 }
-
 class B extends A {
   getX() {
     return this.x;
@@ -909,7 +864,6 @@ b.getX(); // 1
 class A {
   protected x = 1;
 }
-
 class B extends A {
   x = 2;
 }
@@ -922,7 +876,6 @@ class B extends A {
 ```typescript
 class A {
   protected x = 1;
-
   f(obj:A) {
     console.log(obj.x);
   }
@@ -942,7 +895,6 @@ a.f(a); // 1
 class Point {
   x:number;
   y:number;
-
   constructor(x:number, y:number) {
     this.x = x;
     this.y = y;
@@ -962,8 +914,8 @@ class Point {
   ) {}
 }
 const p = new Point(10, 10);
-p.x // 10
-p.y // 10
+p.x; // 10
+p.y; // 10
 ```
 
 上例中，构造方法的参数 `x` 前面有 `public` 修饰符，这时 TypeScript 就会自动声明一个公开属性 `x`，不必在构造方法里面写任何代码，同时还会设置 `x` 的值为构造方法的参数值。这里的 `public` 不能省略。
@@ -1057,8 +1009,8 @@ class B extends A {
   }
 }
 
-B.x // 1
-B.getY() // 1
+B.x;      // 1
+B.getY(); // 1
 ```
 
 上例中，类 `A` 的静态属性 `x` 和 `y` 都被 `B` 继承，公开成员 `x` 可以在 `B` 的外部获取，保护成员 `y` 只能在 `B` 的内部获取。
@@ -1070,12 +1022,10 @@ B.getY() // 1
 ```typescript
 class Box<Type> {
   contents: Type;
-
   constructor(value:Type) {
     this.contents = value;
   }
 }
-
 const b:Box<string> = new Box('hello!');
 ```
 
@@ -1112,8 +1062,8 @@ class B extends A {
   amount = 100;
 }
 const b = new B();
-b.id // 1
-b.amount // 100
+b.id;     // 1
+b.amount; // 100
 ```
 
 上例中，`A` 是一个抽象类，`B` 是 `A` 的子类，继承了 `A` 的所有成员，并且可以定义自己的成员和实例化。
@@ -1175,7 +1125,6 @@ class B extends A {
 ```typescript
 class A {
   name = 'A';
-
   getName() {
     return this.name;
   }
@@ -1188,7 +1137,7 @@ const b = {
   name: 'b',
   getName: a.getName
 };
-b.getName() // 'b'
+b.getName(); // 'b'
 ```
 
 上例中，变量 `a` 和 `b` 的 `getName()` 是同一个方法，但是执行结果不一样，原因就是它们内部的 `this` 指向不一样的对象。如果 `getName()` 在变量 `a` 上运行，`this` 指向 `a`；如果在 `b` 上运行，`this` 指向 `b`。
@@ -1200,16 +1149,10 @@ b.getName() // 'b'
 function fn(
   this: SomeType,
   x: number
-) {
-  /* ... */
-}
-```
+) { /* */ }
 
-```javascript
 // 编译后
-function fn(x) {
-  /* ... */
-}
+function fn(x) { /* */ }
 ```
 
 上例中，函数 `fn()` 的第一个参数是 `this`，用来声明函数内部的 `this` 的类型。编译时，TypeScript 一旦发现函数的第一个参数名为 `this`，则会去除这个参数，即编译结果不会带有该参数。
@@ -1217,7 +1160,6 @@ function fn(x) {
 ```typescript
 class A {
   name = 'A';
-
   getName(this: A) {
     return this.name;
   }
@@ -1251,7 +1193,6 @@ foo.call({ name: 123 }); // Type 'number' is not assignable to type 'string'.
 ```typescript
 class Box {
   contents:string = '';
-
   set(value:string):this {
     this.contents = value;
     return this;
@@ -1278,11 +1219,9 @@ class FileSystemObject {
   isFile(): this is FileRep {
     return this instanceof FileRep;
   }
-
   isDirectory(): this is Directory {
     return this instanceof Directory;
   }
-
   // ...
 }
 ```
