--- a/2基本用法.md
+++ b/2基本用法.md
@@ -5,8 +5,8 @@
 变量只有赋值后才能使用，否则就会报错。
 
 ```typescript
-let x:number;
-console.log(x); // 在赋值前使用了变量“x”。
+let x: number;
+x; // Variable 'x' is used before being assigned.
 ```
 
 ## 2. 类型推断
