--- a/8函数.md
+++ b/8函数.md
@@ -53,10 +53,8 @@ const people = ['alice', 'bob', 'jan'].map((name):Person => ({name}));
 如果函数的某个参数可以省略，则在参数名后面加问号表示。
 
 ```typescript
-function f(x?:number) {
-  // ...
-}
-f(); // OK
+function f(x?:number) { /* */ }
+f();   // OK
 f(10); // OK
 ```
 
@@ -75,7 +73,7 @@ f(undefined); // 正确
 function f(x:number|undefined) {
   return x;
 }
-f() // 报错
+f(); // 报错
 ```
 
 上例中，参数 `x` 的类型是 `number|undefined`，表示要么传入一个数值，要么传入 `undefined`，如果省略这个参数，就会报错。
@@ -138,7 +136,6 @@ function createPoint(
 **可选参数与默认值不能同时使用。**
 
 ```typescript
-// 报错
 function f(x?: number = 0) { // Parameter cannot have question mark and initializer. 形参不能有问号和初始化值
   // ...
 }
@@ -162,8 +159,8 @@ function add(
 ) {
   return x + y;
 }
-add(1) // 报错
-add(undefined, 1) // 正确
+add(1);            // 报错
+add(undefined, 1); // 正确
 ```
 
 ## 4. readonly 只读参数
@@ -242,10 +239,10 @@ type voidFunc = () => void;
 const f:voidFunc = () => {
   return 123;
 };
-f() * 2 // The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type. 算术运算的左边必须是“any”、“number”、“bigint”或枚举类型。
+f() * 2; // The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type. 算术运算的左边必须是“any”、“number”、“bigint”或枚举类型。
 ```
 
-上例中，最后一行报错了，因为根据类型声明，**f()没有返回值，但是却用到了它的返回值，因此报错了。** 
+上例中，最后一行报错了，因为根据类型声明，**f()没有返回值，但是却用到了它的返回值，因此报错了。**
 
 注意，这种情况仅限于变量、对象方法和函数参数，函数字面量如果声明了返回值是 void 类型，还是不能有返回值。
 
@@ -300,8 +297,8 @@ const newTxt:message = hello('world'); // Cannot find name 'message'. Exported v
 **有些函数可以接受不同类型或不同个数的参数，并且根据参数的不同，会有不同的函数行为。这种根据参数类型不同，执行不同逻辑的行为，称为函数重载（function overload）。**
 
 ```typescript
-reverse('abc') // 'cba'
-reverse([1, 2, 3]) // [3, 2, 1]
+reverse('abc');     // 'cba'
+reverse([1, 2, 3]); // [3, 2, 1]
 ```
 
 上例中，函数 `reverse()` 可以将参数颠倒输出。参数可以是字符串，也可以是数组。这意味着，该函数内部有处理字符串和数组的两套逻辑，**根据参数类型的不同，分别执行对应的逻辑，这就叫“函数重载”。**
@@ -373,9 +370,7 @@ function fn(x:number|string) {
 ```typescript
 function f(x:any):number;
 function f(x:string): 0|1;
-function f(x:any):any {
-  // ...
-}
+function f(x:any):any { /* */ }
 const a:0|1 = f('hi'); // Type 'number' is not assignable to type '0 | 1'. 'x' is declared but its value is never read. 类型'number'不能赋值给类型'0 | 1'。 声明了'x'，但永远不会读取它的值。
 ```
 
