--- a/9对象.md
+++ b/9对象.md
@@ -35,7 +35,7 @@ const myUser = {
   name: "Sabrina",
 };
 myUser.name = "Cynthia"; // 正确
-delete myUser.name // The operand of a 'delete' operator must be optional. 'delete'操作符的操作数必须是可选的。
+delete myUser.name; // The operand of a 'delete' operator must be optional. 'delete'操作符的操作数必须是可选的。
 ```
 
 上面声明中，删除类型声明中存在的属性name会报错，但是可以修改它的值。
@@ -47,8 +47,7 @@ const obj:{
   x: number;
   y: number;
   add(x:number, y:number): number;
-  // 或者写成
-  // add: (x:number, y:number) => number;
+  // 或者写成：add: (x:number, y:number) => number;
 } = {
   x: 1,
   y: 1,
@@ -66,7 +65,7 @@ type User = {
   age: number
 };
 type Name = User['name']; // type Name = string
-type Age = User.age; // User 是类型不是命名空间
+type Age = User.age;      // User 是类型不是命名空间
 ```
 
 除了 `type` 命令可以为对象类型声明一个别名，TypeScript 还提供了 `interface` 命令，可以把对象类型提炼为一个接口。
@@ -92,7 +91,7 @@ const obj:MyObj = { x: 1, y: 1 };
 ```typescript
 interface MyInterface {
   toString(): string; // 继承的属性
-  prop: number; // 自身的属性
+  prop: number;       // 自身的属性
 }
 const obj:MyInterface = { // 正确
   prop: 123,
@@ -149,7 +148,7 @@ type MyObj = {
   y?: string
 };
 const obj:MyObj = { x: 'hello' };
-obj.y.toLowerCase() // 'obj.y' is possibly 'undefined'.
+obj.y.toLowerCase(); // 'obj.y' is possibly 'undefined'.
 ```
 
 所以，读取可选属性之前，必须检查一下是否为undefined。
@@ -257,7 +256,7 @@ let w:Person = {
 };
 let r:ReadonlyPerson = w;
 w.age += 1;
-r.age // 43
+r.age;      // 43
 r.age = 45; // Cannot assign to 'age' because it is a read-only property.
 ```
 
@@ -366,7 +365,7 @@ type MyArr = {
   [n:number]: number;
 };
 const arr:MyArr = [1, 2, 3];
-arr.length // Property 'length' does not exist on type 'MyArr'.
+arr.length; // Property 'length' does not exist on type 'MyArr'.
 // 改成下面这样就正确
 type MyArr = {
   [n:string]: number;
