--- a/6元组.md
+++ b/6元组.md
@@ -32,6 +32,7 @@ let a = [1, true];
 ```typescript
 let a:[number, number?] = [1];
 ```
+
 上例中，元组 `a` 的第二个成员是可选的，可以省略。
 
 **问号只能用于元组的尾部成员，也就是说，所有可选成员必须在必选成员之后。**
@@ -44,6 +45,7 @@ type myTuple = [
   string?
 ];
 ```
+
 上例中，元组myTuple的最后两个成员是可选的。也就是说，它的成员数量可能有两个、三个和四个。
 
 由于需要声明每个成员的类型，所以大多数情况下，元组的成员数量是有限的，从类型声明就可以明确知道，元组包含多少个成员，越界的成员会报错。
@@ -89,24 +91,26 @@ const t3: t3 = [false, true, '1', 1];
 ```typescript
 type Tuple = [...any[]];
 ```
+
 上例中，元组Tuple可以放置任意数量和类型的成员。但是这样写，也就失去了使用元组和 TypeScript 的意义。
 
 元组可以通过方括号，读取成员类型。
 
 ```typescript
 type Tuple = [string, number];
-type Age = Tuple[1]; // number
+type Age = Tuple[1];  // number
 type Name = Tuple[0]; // string
 let age: Age = 18;
 let nickName: Name = 'lisi'; 
 ```
+
 上例中，`Tuple[1]` 返回 `1` 号位置的成员类型 `number`，`Tuple[0]` 返回 `0` 号位置的成员类型 `string`。
 
 由于元组的成员都是数值索引，即索引类型都是 `number`，所以可以像下面这样读取。
 
 ```typescript
 type Tuple = [string, number, Date];
-type TupleEl = Tuple[number];  // string|number|Date
+type TupleEl = Tuple[number]; // string|number|Date
 
 let a1: TupleEl = 'a';
 let a2: TupleEl = 1;
@@ -151,9 +155,9 @@ let point = [3, 4] as const;
 distanceFromOrigin(point); // 报错
 ```
 
-上例中，函数distanceFromOrigin()的参数是一个元组，传入只读元组就会报错，因为只读元组不能替代元组。
+上例中，函数 `distanceFromOrigin()` 的参数是一个元组，传入只读元组就会报错，因为只读元组不能替代元组。
 
-上例中[3, 4] as const的写法，在上一章讲到，生成的是只读数组，其实生成的同时也是只读元组。因为它生成的实际上是一个只读的“值类型”readonly [3, 4]，把它解读成只读数组或只读元组都可以。
+上例中 `[3, 4] as const` 的写法，在上一章讲到，生成的是只读数组，其实生成的同时也是只读元组。因为它生成的实际上是一个只读的“值类型” `readonly [3, 4]`，把它解读成只读数组或只读元组都可以。
 
 上面示例报错的解决方法，就是使用类型断言，在最后一行将传入的参数断言为普通元组。
 
@@ -174,6 +178,7 @@ function f(point: [number, number]) {
   }
 }
 ```
+
 上面示例会报错，原因是 TypeScript 发现元组 `point` 的长度是 2，不可能等于 3，这个判断无意义。
 
 如果包含了可选成员，TypeScript 会推断出可能的成员数量。
@@ -214,6 +219,7 @@ function add(x:number, y:number){
 }
 add(...arr) // A spread argument must either have a tuple type or be passed to a rest parameter.扩展参数必须具有元组类型，或者传递给rest形参。
 ```
+
 上面示例会报错，原因是函数add()只能接受两个参数，但是传入的是 `...arr`，TypeScript 认为转换后的参数个数是不确定的。
 
 需要改成下面这样：
