--- a/14类型断言.md
+++ b/14类型断言.md
@@ -5,14 +5,11 @@ TypeScript 提供了“类型断言”这样一种手段，允许开发者在代
 类型断言有两种语法。
 
 ```typescript
-// 语法一：<类型>值
-<Type>value
-
-// 语法二：值 as 类型
-value as Type
+<Type>value   // 语法一：<类型>值
+value as Type // 语法二：值 as 类型
 ```
 
-上面两种语法是等价的，`value` 表示值，`Type` 表示类型。早期只有语法一，后来因为 TypeScript 开始支持 React 的 JSX 语法（尖括号表示 HTML 元素），为了避免两者冲突，就引入了语法二。目前，推荐使用语法二。
+上面两种语法是等价的，`value` 表示值，`Type` 表示类型。早期只有语法一，后来因为 TypeScript 开始支持 React 的 `JSX` 语法（尖括号表示 HTML 元素），为了避免两者冲突，就引入了语法二。目前，推荐使用语法二。
 
 ```typescript
 type T = 'a'|'b'|'c';
@@ -123,15 +120,13 @@ type Lang =
   |'JavaScript'
   |'TypeScript'
   |'Python';
-function setLang(language:Lang) {
-  /* ... */
-}
+function setLang(language:Lang) { /* */ }
 setLang(s); // Argument of type 'string' is not assignable to parameter of type 'Lang'.
 ```
 
 函数 `setLang()` 的参数 `language` 类型是 `Lang`，这是一个联合类型。传入的字符串 `s` 的类型被推断为 `string`，属于 `Lang` 的父类型。父类型不能替代子类型，导致报错。
 
-一种解决方法就是把 let 命令改成 const 命令。
+一种解决方法就是把 `let` 命令改成 `const` 命令。
 
 ```typescript
 const s = 'JavaScript';
@@ -241,20 +236,14 @@ let e2 = Foo.X as const; // let e2: Foo.X
 
 ```typescript
 const root = document.getElementById('root');
-
-// 'root' is possibly 'null'.
-root.addEventListener('click', e => {
-  /* ... */
-});
+root.addEventListener('click', e => { /* */ }); // 'root' is possibly 'null'.
 ```
 
 如果可以确认root元素肯定会在网页中存在，这时就可以使用非空断言。
 
 ```typescript
 const root = document.getElementById('root')!;
-root!.addEventListener('click', e => {
-  /* ... */
-});
+root!.addEventListener('click', e => { /*  */ });
 ```
 
 `getElementById()` 方法加上后缀 `!`，或者 `root` 加上非空断言 `!` 表示这个方法肯定返回非空结果。
@@ -266,9 +255,7 @@ const root = document.getElementById('root');
 if (root === null) {
   throw new Error('Unable to find DOM element #root');
 }
-root.addEventListener('click', e => {
-  /* ... */
-});
+root.addEventListener('click', e => { /* */ });
 ```
 
 ## 4. 断言函数
