--- a/15模块.md
+++ b/15模块.md
@@ -84,13 +84,13 @@ import type { a } from './a'; // 报错
 
 上例中，`import type` 输入类型 `A` 是正确的，但是输入正常接口 `a` 就会报错。
 
-import type 语句也可以输入默认类型。
+`import type` 语句也可以输入默认类型。
 
 ```typescript
 import type DefaultType from 'moduleA';
 ```
 
-import type 在一个名称空间下，输入所有类型的写法如下。
+`import type` 在一个名称空间下，输入所有类型的写法如下。
 
 ```typescript
 import type * as TypeNS from 'moduleA';
@@ -102,11 +102,9 @@ import type * as TypeNS from 'moduleA';
 type A = 'a';
 type B = 'b';
 
-// 方法一
-export {type A, type B};
+export {type A, type B}; // 方法一
 
-// 方法二
-export type {A, B};
+export type {A, B};      // 方法二
 ```
 
 上例中，方法一是使用 `type` 关键字作为前缀，表示输出的是类型；方法二是使用 `export type` 语句，表示整行输出的都是类型。
@@ -118,7 +116,6 @@ class Point {
   x: number;
   y: number;
 }
-
 export type { Point };
 ```
 
@@ -172,7 +169,7 @@ console.log(obj.foo); // 123
 
 ## 3. 模块定位
 
-模块定位（module resolution）指的是确定 `import` 语句和 `export` 语句里面的模块文件位置。
+模块定位（`module resolution`）指的是确定 `import` 语句和 `export` 语句里面的模块文件位置。
 
 ```typescript
 import { TypeA } from './a';
