--- a/21运算符.md
+++ b/21运算符.md
@@ -11,7 +11,6 @@ type MyObj = {
   foo: number,
   bar: string,
 };
-
 type Keys = keyof MyObj; // 'foo'|'bar'
 ```
 
@@ -23,7 +22,6 @@ interface T {
   a: string;
   b(): void;
 }
-
 type KeyT = keyof T; // 0 | 'a' | 'b'
 ```
 
@@ -63,7 +61,6 @@ type MyKeys<Obj extends object> = Capital<string & keyof Obj>;
 interface T {
   [prop: number]: number;
 }
-
 // number
 type KeyT = keyof T;
 
@@ -71,7 +68,6 @@ type KeyT = keyof T;
 interface T {
   [prop: string]: number;
 }
-
 // string|number
 type KeyT = keyof T;
 ```
@@ -100,8 +96,7 @@ type KeyT = keyof (A | B);  // type KeyT = "z", keyof (A | B) <=> 'z'
 type A = { a: string; x: boolean };
 type B = { b: string; y: number };
 
-// 返回 'a' | 'x' | 'b' | 'y'
-type KeyT = keyof (A & B);
+type KeyT = keyof (A & B); // 返回 'a' | 'x' | 'b' | 'y'
 
 // 相当于
 keyof (A & B) ≡ keyof A | keyof B
@@ -239,11 +234,11 @@ type Foo = {
 };
 ```
 
-上例中，[`Prop in U]` 表示依次取出联合类型 `U` 的每一个成员。
+上例中，`[Prop in U]` 表示依次取出联合类型 `U` 的每一个成员。
 
 `[Prop in keyof Obj]` 表示取出对象 `Obj` 的每一个键名。`keyof Obj` 表示取出 `Obj` 对象的所有健名组成的联合类型（假设为 `U`），`Prop in U` 表示取出联合类型的每一个成员类型。
 
-### 3. 方括号运算符
+## 3. 方括号运算符
 
 **方括号运算符（`[]`）用于取出对象的键类型**，比如 `T[K]` 会返回对象 T 的属性 `K` 的类型。
 
@@ -325,7 +320,7 @@ interface Animal {
 interface Dog extends Animal {
   woof(): void;
 }
-type T1 = Dog extends Animal ? number : string; // type T1 = number
+type T1 = Dog extends Animal ? number : string;    // type T1 = number
 type T2 = RegExp extends Animal ? number : string; // type T2 = string
 ```
 
@@ -337,7 +332,7 @@ type T2 = RegExp extends Animal ? number : string; // type T2 = string
 
 ```typescript
 (A|B) extends U ? X : Y
-<=>
+// <=>
 (A extends U ? X : Y) |
 (B extends U ? X : Y)
 ```
@@ -400,14 +395,11 @@ type Flatten<Type> =
 
 上例中，`infer Item` 表示 `Item` 这个参数是 TypeScript 自己推断出来的，不用显式传入，而 `Flatten<Type>` 则表示 `Type` 这个类型参数是外部传入的。`Type extends Array<infer Item>` 则表示，如果参数 `Type` 是一个数组，那么就将该数组的成员类型推断为 `Item`，即 `Item` 是从 `Type` 推断出来的。
 
-一旦使用 `Infer Item` 定义了 `Item`，后面的代码就可以直接调用 `Item` 了。下面是上例的泛型Flatten<Type>的用法。
+一旦使用 `Infer Item` 定义了 `Item`，后面的代码就可以直接调用 `Item` 了。下面是上例的泛型`Flatten<Type>` 的用法。
 
 ```typescript
-// string
-type Str = Flatten<string[]>;
-
-// number
-type Num = Flatten<number>;
+type Str = Flatten<string[]>; // string
+type Num = Flatten<number>;   // number
 ```
 
 上例中，第一个例子 `Flatten<string[]>` 传入的类型参数是 `string[]`，可以推断出 `Item` 的类型是 `string`，所以返回的是 `string`。第二个例子 `Flatten<number>` 传入的类型参数是 `number`，它不是数组，所以直接返回自身。
@@ -464,7 +456,6 @@ class Teacher {
     return false;
   }
 }
-
 class Student {
   isStudent():this is Student {
     return true;
