--- a/12泛型.md
+++ b/12泛型.md
@@ -18,7 +18,7 @@ function getFirst<T>(arr:T[]):T {
 }
 ```
 
-上例中，函数 `getFirst()` 的函数名后面尖括号的部分<T>，就是类型参数，参数要放在一对尖括号（<>）里面。本例只有一个类型参数T，可以将其理解为类型声明需要的变量，需要在调用时传入具体的参数类型。
+上例中，函数 `getFirst()` 的函数名后面尖括号的部分 `<T>`，就是类型参数，参数要放在一对尖括号（`<>`）里面。本例只有一个类型参数T，可以将其理解为类型声明需要的变量，需要在调用时传入具体的参数类型。
 
 上例的函数 `getFirst()` 的参数类型是 `T[]`，返回值类型是 `T`，就清楚地表示了两者之间的关系。比如，输入的参数类型是 `number[]`，那么 `T` 的值就是 `number`，因此返回值类型也是 `number`。
 
@@ -49,8 +49,9 @@ function comb<T>(arr1:T[], arr2:T[]):T[] {
 上例中，两个参数 `arr1`、`arr2` 和返回值都是同一个类型。如果不给出类型参数的值，下面的调用会报错。
 
 ```typescript
-comb([1, 2], ['a', 'b']) // Type 'string' is not assignable to type 'number'.
+comb([1, 2], ['a', 'b']); // Type 'string' is not assignable to type 'number'.
 ```
+
 上面示例会报错，TypeScript 认为两个参数不是同一个类型。但是，如果类型参数是一个联合类型，就不会报错。
 
 ```typescript
@@ -91,11 +92,8 @@ function id<T>(arg:T):T {
 那么对于变量形式定义的函数，泛型有下面两种写法。
 
 ```typescript
-// 写法一
-let myId:<T>(arg:T) => T = id;
-
-// 写法二
-let myId:{ <T>(arg:T): T } = id;
+let myId:<T>(arg:T) => T = id;   // 写法一
+let myId:{ <T>(arg:T): T } = id; // 写法二
 ```
 
 ### 1.2. 接口的泛型写法
@@ -116,9 +114,7 @@ interface Comparator<T> {
   compareTo(value:T): number;
 }
 class Rectangle implements Comparator<Rectangle> {
-  compareTo(value:Rectangle): number {
-    // ...
-  }
+  compareTo(value:Rectangle): number {/* */ }
 }
 ```
 
@@ -275,16 +271,16 @@ class Generic<T = string> {
 
 ```typescript
 const g = new Generic();
-g.add(4) // Argument of type 'number' is not assignable to parameter of type 'string'.
-g.add('hello') // 正确
+g.add(4); // Argument of type 'number' is not assignable to parameter of type 'string'.
+g.add('hello'); // 正确
 ```
 
 上例中，新建 `Generic` 的实例 `g` 时，没有给出类型参数 `T` 的值，所以 `T` 就等于 `string` 。因此，向 `add()` 方法传入一个数值会报错，传入字符串就不会。
 
 ```typescript
 const g = new Generic<number>();
-g.add(4) // 正确
-g.add('hello') // Argument of type 'string' is not assignable to parameter of type 'number'.
+g.add(4); // 正确
+g.add('hello'); // Argument of type 'string' is not assignable to parameter of type 'number'.
 ```
 
 上例中，新建实例 `g` 时，给出了类型参数 `T` 的值是 `number`，因此 `add()` 方法传入数值不会报错，传入字符串会报错。
@@ -292,8 +288,8 @@ g.add('hello') // Argument of type 'string' is not assignable to parameter of ty
 **一旦类型参数有默认值，就表示它是可选参数。如果有多个类型参数，可选参数必须在必选参数之后。**
 
 ```typescript
-<T = boolean, U> // 错误
-<T, U = boolean> // 正确
+<T = boolean, U>; // 错误
+<T, U = boolean>; // 正确
 ```
 
 上例中，依次有两个类型参数 `T` 和 `U`。如果 `T` 是可选参数，`U` 不是，就会报错。
@@ -355,9 +351,9 @@ function comp<T extends { length: number }>(a: T, b: T) {
   }
   return b;
 }
-comp([1, 2], [1, 2, 3]) // 正确
-comp('ab', 'abc') // 正确
-comp(1, 2) // 'number'类型的参数不能赋值给'{length: number;}”。
+comp([1, 2], [1, 2, 3]); // 正确
+comp('ab', 'abc');       // 正确
+comp(1, 2);              // 'number'类型的参数不能赋值给'{length: number;}”。
 ```
 
 上例中，`T extends { length: number }` 就是约束条件，表示类型参数 `T` 必须满足 `{ length: number }`，否则就会报错。
