--- a/9对象.md
+++ b/9对象.md
@@ -11,7 +11,7 @@ type MyObj = {
   x:number;
   y:number;
 };
-const o1:MyObj = { x: 1 }; // 报错
+const o1:MyObj = { x: 1 };             // 报错
 const o2:MyObj = { x: 1, y: 1, z: 1 }; // 报错
 ```
 
@@ -46,8 +46,7 @@ delete myUser.name; // The operand of a 'delete' operator must be optional. 'del
 const obj:{
   x: number;
   y: number;
-  add(x:number, y:number): number;
-  // 或者写成：add: (x:number, y:number) => number;
+  add(x:number, y:number): number; // 或者：add: (x:number, y:number) => number;
 } = {
   x: 1,
   y: 1,
@@ -311,12 +310,8 @@ const obj:MyObj = {
 JavaScript 对象的属性名（即上例的property）的类型有三种可能，除了上例的string，还有number和symbol。
 
 ```typescript
-type T1 = {
-  [property: number]: string
-};
-type T2 = {
-  [property: symbol]: string
-};
+type T1 = { [property: number]: string };
+type T2 = { [property: symbol]: string };
 ```
 
 上例中，对象属性名的类型分别为 `number` 和 `symbol`。
@@ -645,8 +640,7 @@ const pt = {
 
 ```typescript
 let d:{};
-// 等同于
-// let d:Object;
+// 等同于：let d:Object;
 
 d = {};
 d = { x: 1 };
